add more sample files
